# tiro

./: .gitignore  Cargo.toml  README.md  build.rs  release.sh  tiro-hs.cabal
.github/workflows/: rust.yml
design/: activities.md  architecture.md  cli.md  file_cleanup.md  output.md
example/: activities.txt  config.toml  extra_activities.txt  out
src/: Config.hs  Main.hs  Parse.hs  PrettyPrint.hs  Summary.hs  Types.hs  app.rs  cli.yml  config.rs  input.rs  main.rs  merge.rs  notification.rs  output.rs  parse.rs  parse_state.rs  pretty_print.rs  summary.rs  versioning.rs
src/domain/: activity.rs  mod.rs
tests/: cleanup_tests.rs  cli_tests.rs  e2e_color_tests.rs
