[package]
name = "tiro"
version = "0.3.7"
authors = ["Quentin Hibon <qh.public@yahoo.com>"]
edition = "2018"
repository = "https://github.com/hiqua/tiro"
homepage = "https://github.com/hiqua/tiro"
description = "Planning tool"
license = "GPL-3.0-or-later"
build = "build.rs"

[dependencies]
chrono = "=0.4.19"
time = "=0.1.44"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"
serde_derive = "1.0.106"
colored = "1.9"
clap = {version = "2.33.0", features = ["yaml"]}
notify = "4.0.12"
# requires some libdbus library, see github page
notify-rust = "3"
anyhow = "1.0"

[build-dependencies]
vergen = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
textwrap = "0.16"
regex = "1"
walkdir = "2.5.0"
